--- a/public/map.html
+++ b/public/map.html
@@ -2354,7 +2354,7 @@
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
-    
+
       // Your web app's Firebase configuration
       const firebaseConfig = {
         apiKey: "AIzaSyDODrylR-oS59VJ3Di4wGljI9KTiX0zNDE",
@@ -2362,9 +2362,9 @@
         projectId: "hawke-map",
         storageBucket: "hawke-map.appspot.com",
         messagingSenderId: "419006557651",
-        appId: "1:419006557651:web:931456f6d62ed01b425326"
+        appId: "1:419006557651:web:931456f6d62ed01b425326",
       };
-    
+
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
     </script>
