--- a/public/map.html
+++ b/public/map.html
@@ -1260,6 +1260,16 @@
             placeId: "ChIJl3aeIUAjoFMRNfDM_FIyXe0",
           },
           {
+            "title":"East Village Liquor Store",
+            "info": "Thick & Dirty here",
+            "address1":"395 Loutit Rd #121","address2":
+            "Fort McMurray, AB T9K 0Z4, Canada",
+            "coords":{"lat":56.75268731189674,"lng":-111.42733074601536},
+            "placeId":"ChIJfZUzBCQJsFMRJGM3XxZDLUI",
+            "image": image_1,
+            "label": "T&D",
+          },
+          {
             title: "ECONO LIQUOR 6",
             address1: "4313 167 Ave NW",
             address2: "Edmonton, AB T5Y 3Y2, Canada",
@@ -1286,6 +1296,16 @@
             address2: "Edmonton, AB T6E 5L8, Canada",
             coords: { lat: 53.488541790532295, lng: -113.4697263411045 },
             placeId: "ChIJazvnrMcYoFMRnmvTDxUK728",
+          },
+          {
+            "title":"Fort Mac Liquor Store",
+            "info": "Thick & Dirty here",
+            "address1":"8410 Franklin Ave",
+            "address2":"Fort McMurray, AB T9H 2J3, Canada",
+            "coords":{"lat":56.71843044501716,"lng":-111.35674777055226},
+            "placeId":"ChIJr9s6PPkPsFMRAFETUoQxX5c",
+            "image": image_1,
+            "label": "T&D",
           },
           {
             title: "Garside - Evolution Liquor Inc.",
@@ -1627,6 +1647,16 @@
             label: "T&D",
           },
           {
+            "title":"Mr. Liquor",
+            "info": "Thick & Dirty here",
+            "address1":"1-9914 King St",
+            "address2":"Fort McMurray, AB T9H 5A8, Canada",
+            "coords":{"lat":56.714714458167656,"lng":-111.35027779631253},
+            "placeId":"ChIJzxKLsFcPsFMRUtG8DK7T5kU",
+            "image": image_1,
+            "label": "T&D",
+          },
+          {
             title: "Overlander Mountain Lodge",
             info: "Thick & Dirty here",
             address1: "27010 Highway 16 west",
@@ -1756,6 +1786,16 @@
             placeId: "ChIJ53xBx_q6Y0ERcTLc47BEAeU",
             image: image_1,
             label: "T&D",
+          },
+          {
+            "title":"Sobeys Liquor Clearwater",
+            "info": "Thick & Dirty here",
+            "address1":"19 Riedel St #205",
+            "address2":"Fort McMurray, AB T9H 5P8, Canada",
+            "coords":{"lat":56.722603822627974,"lng":-111.36205603497028},
+            "placeId":"ChIJhy1r9E0PsFMRgb3D2WSo4yE",
+            "image": image_1,
+            "label": "T&D",
           },
           {
             title: "Sobeys Liquor Edson 50 St.",
